--- a/package.json
+++ b/package.json
@@ -1,37 +1,14 @@
 {
   "name": "jonviterdev",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
+  "version": "1.0.0",
+  "description": "my personal website",
+  "main": "index.js",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build && pm2 start ecosystem.config.ts --env production",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "@ant-design/icons": "^5.2.6",
-    "@types/axios": "^0.14.0",
-    "@types/react-icons": "^3.0.0",
-    "@types/styled-components": "^5.1.29",
-    "antd": "^5.11.0",
-    "axios": "^1.6.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-icons": "^4.11.0",
-    "styled-components": "^6.1.0"
-  },
-  "devDependencies": {
-    "@types/node": "^20.10.5",
-    "@types/react": "^18.2.15",
-    "@types/react-dom": "^18.2.7",
-    "@typescript-eslint/eslint-plugin": "^6.0.0",
-    "@typescript-eslint/parser": "^6.0.0",
-    "@vitejs/plugin-react": "^4.0.3",
-    "eslint": "^8.45.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.3",
-    "typescript": "^5.0.2",
-    "vite": "^4.4.5"
+    "express": "^4.21.2"
   }
 }
